[package]
name = "diverseupdate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.16"
zip = "0.5"
futures = "0.3.30"
tar = "0.4.40"
flate2 = "1.0.28"
